Implemented Godspeed Shoes
incl. various minor fixes

--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
                 </div>
                 <div>
                 </div>
-               <div>
+                <div>
                   <input id="rlbc-mode" type="checkbox">
                   <label for="rlbc-mode">Reverse Library Card
                     <span class="tooltip-wrapper">
@@ -688,8 +688,6 @@
                   </label>
                 </div>
                 <div>     </div>
-                <div>     </div>
-                <div>     </div>
                 <div>     
                   <input id="immunity-potion-mode" type="checkbox">
                   <label for="immunity-potion-mode">Immunity Potions
@@ -700,6 +698,20 @@
                           Converts Resist Fire, Resist Ice, etc. potions to grant 
                           Immunity to the element in question and allows them to grant 
                           invincibility frames.
+                        </span>
+                      </span>
+                    </span>
+                  </label>
+                </div>
+                <div>     </div>
+                <div>     
+                  <input id="godspeed-mode" type="checkbox">
+                  <label for="godspeed-mode">Godspeed Shoes
+                    <span class="tooltip-wrapper">
+                      <span class="tooltip-indicator">?</span>
+                      <span class="tooltip hidden">
+                        <span>
+                          Allows Alucard to run by double-pressing in the direction you intend to move in.
                         </span>
                       </span>
                     </span>
@@ -878,6 +890,7 @@
           <li>Added Song Exclusion to the website.</li>
           <li>Removed Nocturne from the songs to be randomized.</li>
           <li>Added Immunity Potions option.</li>
+          <li>Added Godspeed Shoes option.</li>
         </ul>
         <a id="show-older" href="#older">Show older changes</a>
         <div id="older" class="hidden">
