Preparations for Pride Month

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
     </div>
     <div id="version"></div>
     <main>
-      <div id="content">        
-        <img src = "images/logo.png" class = "center">
+      <div id="content"> 
+      <p id="splashTextDisplay" class="splash-text"></p>       
+        <img src = "images/logopride.png" class = "center">
         <div class = "center-text">
           by Wild Mouse,
           <a class="contact" href="https://twitter.com/3snow_p7im">
