--- a/index.html
+++ b/index.html
@@ -868,12 +868,12 @@
           <h4>Preset Changes</h4>
           <li>Added Seeker preset.</li>
           <li>Added Oracle preset.</li>
-          <li>Added Boss Reflector preset.</li>
           <li>Added All Bosses preset.</li>
           <li>Added Nimble-Lite preset.</li>
           <li>Added Rampage preset.</li>
           <li>Added Cornivus preset.</li>
           <li>Added Max Rando preset.</li>
+          <li>Added Mirror Breaker preset.</li>
           <li>Bounty Hunter, Hitman, Target Confirmed, Chaos Lite, and Rampage no longer require the Bounty Hunter Tool.</li>
           <li>Added Item Stat and Item Name Randomizer to Chaos-Lite.</li>
           <li>Lookingglass is now Deprecated. This can still be generated through Command Line Interface (CLI) and will still build en masse.</li>
@@ -1580,11 +1580,11 @@
     <script src="build/presets/oracle.js"></script>
     <script src="build/presets/seeker.js"></script>
     <script src="build/presets/all-bosses.js"></script>
-    <script src="build/presets/boss-reflector.js"></script>
     <script src="build/presets/nimble-lite.js"></script>
     <script src="build/presets/rampage.js"></script>
     <script src="build/presets/cornivus.js"></script>
     <script src="build/presets/max-rando.js"></script>
+    <script src="build/presets/mirror-breaker.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
     <script src="src/browser.js"></script>
