Fix to spacing on the website

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </fieldset>
           <div id = "content"></div>      
           <div id="randomization-options" class="responsive-three-column-grid">
-            <fieldset style="display: block; width: 100%;">
+            <fieldset class="input-box">
               <legend>Randomizations</legend>
               <div id="seed-container">
                 <label for="seed">Seed:</label>
@@ -339,7 +339,7 @@
                 </div>
               </div>
             </fieldset>
-            <fieldset>
+            <fieldset class="input-box">
               <legend>Options</legend>
               <div class = "checkboxes">                
                 <div>
@@ -743,7 +743,7 @@
                 <div>     </div>
               </div>
             </fieldset>
-          <fieldset>
+          <fieldset class="input-box">
               <legend>Customizations</legend>
               <div class = "checkboxes">
                  <div id = "map-dropdown">Map Color:                                   
