--- a/index.html
+++ b/index.html
@@ -873,12 +873,13 @@
             <ul>
               <li>Added Seeker preset.</li>
               <li>Added Oracle preset.</li>
-              <li>Added Boss Reflector preset.</li>
+              <li>Added Mirror Breaker preset.</li>
               <li>Added All Bosses preset.</li>
               <li>Added Nimble-Lite preset.</li>
               <li>Added Rampage preset.</li>
               <li>Added Cornivus preset.</li>
               <li>Added Max Rando preset.</li>
+              <li>Added Recycler preset.</li>
               <li>Bounty Hunter, Hitman, Target Confirmed, Chaos Lite, and Rampage no longer require the Bounty Hunter Tool.</li>
               <li>Added Item Stat and Item Name Randomizer to Chaos-Lite.</li>
               <li>Lookingglass is now Deprecated. This can still be generated through Command Line Interface (CLI) and will still build en masse.</li>
@@ -1622,6 +1623,7 @@
     <script src="build/presets/cornivus.js"></script>
     <script src="build/presets/max-rando.js"></script>
     <script src="build/presets/mirror-breaker.js"></script>
+    <script src="build/presets/recycler.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
     <script src="src/browser.js"></script>
