Added excluded songs to storage + added seasonalEvents logic

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <header>
       <div> 
         <p id="splashTextDisplay" class="splash-text"></p>       
-          <img src = "images/logopride.png" alt= "RandomizerLogo" class = "center">
+          <img src = "images/logo.png" alt= "RandomizerLogo" class = "center" id="pageLogo">
           <div class = "center-text">
             by Wild Mouse,
             <a class="contact" href="https://twitter.com/3snow_p7im">
