Added rlbc prevention for recycler and added library shortcut

--- a/index.html
+++ b/index.html
@@ -722,7 +722,19 @@
                   </label>
                 </div>
                 <div>     </div>
-                <div>     </div>
+                <div>
+                  <input id="library-shortcut" type="checkbox">
+                  <label for="library-shortcut">Library Shortcut
+                    <span class="tooltip-wrapper">
+                      <span class="tooltip-indicator">?</span>
+                      <span class="tooltip hidden">
+                        <span>
+                          Opens a shortcut to allow players to swiftly exit the Long Library.
+                        </span>
+                      </span>
+                    </span>
+                  </label>
+                </div>
                 <div>     </div>
                 <div>     </div>
                 <div>     </div>
@@ -901,6 +913,7 @@
               <li>Removed Nocturne from the songs to be randomized.</li>
               <li>Added Immunity Potions option.</li>
               <li>Added Godspeed Shoes option.</li>
+              <li>Added Library Shortcut option.</li>
             </ul>
         <a id="show-older" href="#older">Show older changes</a>
         <div id="older" class="hidden">
