Added Dev's Stash Option

--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
               <img height="16" width="16"
                   src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/twitch.svg" alt = "TwitchIcon"></a>
             , eldri7ch
+            <span class="tooltip-wrapper">
+              <span class="tooltip-indicator">?</span>
+              <span class="tooltip hidden">
+                <span>
+                  <input id="dev-stash" type="checkbox">
+                  <label for="dev-stash">Dev's Stash
+                </span>
+              </span>
+            </span>
             <a class="contact" href="https://bsky.app/profile/eldri7ch.bsky.social">
               <img height="16" width="16"
                   src="https://cdn.jsdelivr.net/npm/simple-icons@latest/icons/bluesky.svg" alt = "BlueSkyIcon">
