Updated Vanilla and Agonize 2020 to have goals

--- a/index.html
+++ b/index.html
@@ -914,6 +914,7 @@
           <h4>Program Updates</h4>
             <ul>
               <li>Incorporated Bounty Hunter tool function into the Randomizer.</li>
+              <li>Removed bug that wouldn't allow Vanilla or Agonize 2020 to generate.</li>
             </ul>
           <h4>Options Changes</h4>
             <ul>
