Fix for 2nd castle start and option for seasonal phrases

--- a/index.html
+++ b/index.html
@@ -666,7 +666,17 @@
                   </label>
                 </div>
                 <div>
-                  
+                  <input id="seasonal-phrases" type="checkbox">
+                  <label for="seasonal-phrases">Seasonal Splash Phrases
+                    <span class="tooltip-wrapper">
+                      <span class="tooltip-indicator">?</span>
+                      <span class="tooltip hidden">
+                        <span>
+                          Allow seasonal and holiday-based splash phrases on the "Press Start" screen.
+                        </span>
+                      </span>
+                    </span>
+                  </label>
                 </div>
                  <div>
                   <input id="domino-mode" type="checkbox">
@@ -908,6 +918,8 @@
               <li>Skinwalker is now Deprecated. This can still be generated through Command Line Interface (CLI) and will still build en masse.</li>
               <li>Re-added Glitch Legacy as Deprecated. This can now be generated through Command Line Interface (CLI) and will be built en masse.</li>
               <li>Re-named Bounty Hunter: TC to Target Confirmed.</li>
+              <li>Fixed a bug created at the end of Boss Rush because of the splash phrases.</li>
+              <li>Fixed a bug that caused a game crash if the player left the CD room at the start of a second-castle start seed to the left.</li>
               <li>The preset audit was successful. Almost every preset has been re-weighted and had the keys sorted to create a uniform order to them.</li>
               <li>How do I fixed Glitch?</li>
             </ul>
@@ -924,6 +936,7 @@
               <li>Added Immunity Potions option.</li>
               <li>Added Godspeed Shoes option.</li>
               <li>Added Library Shortcut option.</li>
+              <li>Added an option to enable seasonal splash phrases on the start screen.</li>
             </ul>
         <a id="show-older" href="#older">Show older changes</a>
         <div id="older" class="hidden">
